# Ripple

./: .gitignore  API_REFERENCE.md  README.md  cleanup_db.sh  docker-compose.yml  start.sh  test_auth.sh  test_campaigns.sh  test_donations.sh
backend/: .env.example  API_REFERENCE.md  AUTHENTICATION.md  DATA_MODEL.md  DONATIONS.md  MIGRATIONS.md  README.md  SECURITY.md  TESTING.md  auth.py  database.py  main.py  models.py  pyproject.toml  recreate_db.py  schemas.py  test_security_manual.sh  verify_validation.py
backend/alembic/: env.py
backend/alembic/versions/: 667bc022c053_initial_database_schema.py
backend/documentation/: API_REFERENCE.md  AUTHENTICATION.md  DATA_MODEL.md
backend/routers/: __init__.py  auth.py  campaigns.py  donations.py  givers.py  users.py
backend/tests/: conftest.py  test_auth.py  test_auth.sh  test_campaigns.sh  test_security.py
backend/utils/: __init__.py  logger.py  validation.py
frontend/: PROJECT_README.md  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx
frontend/src/contexts/: AuthContext.jsx  AuthContext.test.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Login.test.jsx  Profile.jsx  Register.jsx  Register.test.jsx
frontend/src/services/: api.js
frontend/src/test/: setup.js  testUtils.jsx
